# Learn_ML

./: .gitignore  README.md  config.json  fine_tune.py  generate_data.py  main.py  pyproject.toml  singe_test.py  single_test.py  test.py  train_model.py
ascii_cam_model/: model.keras  model.onnx  model_quant.onnx
desktop-app/: Cargo.toml  README.md
desktop-app/src/: main.rs
frontend/: app.js  index.css  index.html  server.py
model-training/: README.md  fine_tune.py  generate_data.py  main.py  optimize_model.py  push_to_hub.py  single_test.py  train_model.py
web-app/: README.md  app.js  index.css  index.html  package.json  server.py
web-app/src/: global.css
web-app/src/lib/components/: Navbar.svelte
web-app/src/routes/: +layout.svelte  +page.svelte
web-app/src/routes/demo/: +page.svelte
web-app/static/model/: model_quant.onnx
