[package]
name = "ascii-cam-filter"
version = "0.1.0"
edition = "2021"

# TUTOR HINT: Hey Eli! Here is the Cargo configuration template for your Rust GUI app.
# This compiles a native app that captures the webcam and processes it into ASCII in real-time.
# You can install Rust using rustup, then navigate to this folder and run `cargo run --release`.

[dependencies]
# GUI Library (extremely easy, fast, and cross-platform)
eframe = "0.28.1"

# Cross-platform webcam capture library
nokhwa = { version = "0.10.4", features = ["input-native"] }

# Image processing library for resizing and converting camera frames
image = "0.25.1"

# OPTIONAL: If you want to run the ONNX model locally in Rust instead of a simple mapping:
# ort = "2.0.0-rc.4" # ONNX Runtime bindings for Rust
